Fixed issue with navbar being covered when scrolling down to an image - z-index change

--- a/css/index.css
+++ b/css/index.css
@@ -287,6 +287,7 @@ header {
   margin: 0rem;
   width: 100%;
   position: fixed;
+  z-index: 5;
 }
 header nav a {
   font-weight: bold;
