--- a/less/navbar.less
+++ b/less/navbar.less
@@ -8,6 +8,7 @@ header{
     margin: 0rem;
     width: 100%;
     position: fixed;
+    z-index: 5;
     nav a{
         font-weight: bold;
         font-size: 48px;
